[package]
name = "compensated-summation"
version = "0.3.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Compensated summation algorithms for better precision."
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/compensated-summation"
categories = ["algorithms", "mathematics"] # https://crates.io/category_slugs
keywords = ["sum", "summation", "numerical-error", "precision", "Kahan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
required-features = ["dev"]

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
all-features = true
